force-app/main/default/objects/Child_Support__c/Child_Support__c.object-meta.xml
<CustomObject>
    <label>Child Support</label>
    <nameField>
        <displayFormat>CS-{0000}</displayFormat>
        <label>Child Support ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Child Supports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>