force-app/main/default/objects/Child_Support__c/fields/Assigned_Organization__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Organization</label>
    <referenceTo>Support_Service__c</referenceTo>
    <relationshipLabel>Child Supports</relationshipLabel>
    <relationshipName>Child_Supports</relationshipName>
    <type>Lookup</type>
</CustomField>