force-app/main/default/objects/Child_Support__c/fields/ConsentFormSigned__c.field-meta.xml
<CustomField>
    <fullName>ConsentFormSigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consent Form Signed</label>
    <type>Checkbox</type>
</CustomField>