force-app/main/default/objects/Child_Support__c/fields/Evaluation_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Outcome__c</fullName>
    <label>Evaluation Outcome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>