force-app/main/default/objects/Child_Support__c/fields/Followuprequired__c.field-meta.xml
<CustomField>
    <fullName>Followuprequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Follow-up Required</label>
    <type>Checkbox</type>
</CustomField>