force-app/main/default/objects/Child_Support__c/fields/IsCourtMandated__c.field-meta.xml
<CustomField>
    <fullName>IsCourtMandated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Court Mandated?</label>
    <type>Checkbox</type>
</CustomField>