force-app/main/default/objects/Child_Support__c/fields/PlanDescription__c.field-meta.xml
<CustomField>
    <fullName>PlanDescription__c</fullName>
    <label>Plan Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>