force-app/main/default/objects/Child_Support__c/fields/ProgressNotes__c.field-meta.xml
<CustomField>
    <fullName>ProgressNotes__c</fullName>
    <label>Progress Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>